testsuite/tests/properties/invalid_cast/test.out
== correct.lkt ==
Code generation was successful

== cross_node.lkt ==
cross_node.lkt:7:64: error: BarNode parent type or subtype expected
7 |     @exported fun prop(): ListNode = node.bar_node_parent().as[ListNode]
  |                                                                ^^^^^^^^


== not_node.lkt ==
not_node.lkt:6:48: error: Bare node type expected
6 |     @exported fun prop(): Int = node.parent.as[Int]
  |                                                ^^^


== null_cond.lkt ==
null_cond.lkt:6:48: error: The null-conditional operator is not allowed on .as
6 |     @exported fun prop(): BarNode = node.parent?.as[BarNode]
  |                                                ^


lkt_compile: Done
